# radreportparser

./: .gitignore  LICENSE.txt  Makefile  README.md  get_started.html  index.html  pyproject.toml  search.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
_dev/: dev-debug.ipynb  dev-extract-file.ipynb  dev-extract.ipynb  dev-history.ipynb  dev-import.ipynb  dev-key.ipynb  dev-log.ipynb  dev-misc.ipynb  dev-parse.ipynb  dev-position.ipynb  dev-section.ipynb  todo.md
_dev/deprecated/: extractor.py
docs/: .gitignore  Makefile  _quarto.yml  get_started.qmd  index.qmd  version_config.py
docs/_draft/: _get_started_claude.qmd
radreportparser/: __init__.py  _logging.py  _pattern.py  _position.py  _version.py  extractor.py  fs.py  history.py  keyword.py  parser.py  pattern.py  report.py  section.py
reference/: KeyWord.html  RadReport.html  SectionExtractor.html  extract_all.html  extract_comparison.html  extract_findings.html  extract_history.html  extract_impression.html  extract_technique.html  extract_title.html  index.html
report/: ex_report.py  ex_snip.py
site_libs/bootstrap/: bootstrap-81500c6e05eeef19b08cd03a287964eb.min.css
tests/: test_pattern.py  test_position.py  test_section_helper.py  test_section_main.py
