[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "radreportparser"
dynamic = ["version"]
description = "Parse Radiology Report Text"
authors = [
    {name = "Lightbridge-KS", email = "ki11ip0.s.a.s@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
# Classifiers help users find your project by categorizing it.
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/Lightbridge-KS/radreportparser"
documentation = "https://lightbridge-ks.github.io/radreportparser/"


[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov",
]
docs = [
    "quartodoc",
    "jupyter"
]
re2 = [
    "google-re2>=1.1",
]
all = [
    "google-re2>=1.1",
]

[tool.setuptools]
packages = ["radreportparser"]


[tool.setuptools_scm]
# Use "no-guess-dev" to get version format like 0.1.0.dev5+g12345
version_scheme = "no-guess-dev"
# Write version to _version.py for runtime access
write_to = "radreportparser/_version.py"